get category by id
